--- a/website/src/index.css
+++ b/website/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html {
+      font-family: 'Hind Mysuru', sans-serif;
+    }
+    
+    body {
+      @apply font-roboto;
+    }
+  }
